--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.github.benjaminsoelberg.jft</groupId>
     <artifactId>JavaForensicsToolkit</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
     <packaging>jar</packaging>
     <name>Java Forensics Toolkit</name>
 
@@ -13,7 +12,8 @@
         <url>https://github.com/BenjaminSoelberg/JavaForensicsToolkit</url>
         <connection>scm:git:git@github.com:BenjaminSoelberg/JavaForensicsToolkit.git</connection>
         <developerConnection>scm:git:git@github.com:BenjaminSoelberg/JavaForensicsToolkit.git</developerConnection>
-    </scm>
+      <tag>1.0.1</tag>
+  </scm>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
