--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>io.github.benjaminsoelberg.jft</groupId>
     <artifactId>JavaForensicsToolkit</artifactId>
-    <version>1.0.2-SNAPSHOT</version>
+    <version>1.0.2</version>
     <packaging>jar</packaging>
     <name>Java Forensics Toolkit</name>
 
@@ -12,7 +12,7 @@
         <url>https://github.com/BenjaminSoelberg/JavaForensicsToolkit</url>
         <connection>scm:git:git@github.com:BenjaminSoelberg/JavaForensicsToolkit.git</connection>
         <developerConnection>scm:git:git@github.com:BenjaminSoelberg/JavaForensicsToolkit.git</developerConnection>
-      <tag>HEAD</tag>
+      <tag>1.0.2</tag>
   </scm>
 
     <properties>
